--- a/package.json
+++ b/package.json
@@ -1,16 +1,21 @@
 {
-  "name": "7333n83-v13",
+  "name": "7333n83",
   "version": "1.0.0",
-  "description": "",
+  "description": "Custom Discord bot.",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node -r dotenv/config index.js",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "create-table": "node -r dotenv/config ./db/scripts/create-table.js",
+    "drop-table": "node -r dotenv/config ./db/scripts/drop-table.js",
+    "read-table": "node -r dotenv/config ./db/scripts/read-table.js",
+    "populate-table": "node -r dotenv/config ./db/scripts/populate-table.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "discord.js": "^14.9.0",
-    "dotenv": "^16.0.3"
+    "discord.js": "^12.5.1",
+    "dotenv": "^8.2.0",
+    "mysql2": "^2.2.5"
   }
 }
