--- a/v14/package.json
+++ b/v14/package.json
@@ -1,6 +1,6 @@
 {
-    "name": "7333n83-v13",
-    "version": "1.0.0",
+    "name": "7333n83",
+    "version": "14.0.0",
     "description": "",
     "main": "index.js",
     "scripts": {
