--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "license": "ISC",
     "dependencies": {
         "discord.js": "^14.9.0",
-        "dotenv": "^16.0.3"
+        "dotenv": "^16.0.3",
+        "mongodb": "^5.7.0"
     }
 }
